fix: deterministic ui sort order